--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "grunt-remove-logging": "^0.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt-contrib-concat": "^0.5.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
