--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "grunt-remove-logging": "^0.2.0"
   },
   "devDependencies": {
-    "grunt-contrib-concat": "^0.5.1"
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
