add: 	- production and development gulp tasks 	- legacy versions of grader permanently have link to github.io/templates 	- templates/ for legacy

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "gulp-debug": "^2.0.1",
-    "gulp-install": "^0.4.0"
+    "gulp-install": "^0.4.0",
+    "gulp-replace": "^0.5.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
