--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
+    "gulp-babel": "^5.1.0",
     "gulp-debug": "^2.0.1",
     "gulp-install": "^0.4.0",
     "gulp-replace": "^0.5.3"
