--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gulp-babel": "^5.1.0",
     "gulp-debug": "^2.0.1",
     "gulp-install": "^0.4.0",
-    "gulp-replace": "^0.5.3"
+    "gulp-replace": "^0.5.3",
+    "gulp-vulcanize": "^6.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
