improve(ActiveTest): runs tests tests totally asynchronously
- TA now runs a series of async methods that run synchronously

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Udacity External Grader",
+  "name": "Udacity External Grader (beta)",
   "version": "0.4",
   "manifest_version": 2,
   "description": "Run tests against an external page's HTML.",
