GE now pulled from files packaged in the ext

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -42,5 +42,9 @@
         "src/inject/inject.js"
       ]
     }
+  ],
+  "web_accessible_resources": [
+    "js/*.js",
+    "templates/*.html"
   ]
 }
