--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-debug": "^2.0.1",
     "gulp-install": "^0.4.0",
     "gulp-replace": "^0.5.3",
+    "gulp-uglify": "^1.4.2",
     "gulp-vulcanize": "^6.0.0"
   },
   "scripts": {
