--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.0.1",
     "gulp-install": "^0.4.0",
-    "gulp-replace": "^0.5.3",
     "gulp-uglify": "^1.4.2",
-    "gulp-vulcanize": "^6.0.0"
+    "gulp-watch": "^4.3.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
