adds file protocol

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -25,7 +25,8 @@
     {
       "matches": [
         "http://*/*",
-        "https://*/*"
+        "https://*/*",
+        "file://*/*"
       ],
       "js": [
         "src/js/inject.js"
