--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,19 +1,19 @@
 {
   "name": "Udacity Front End Feedback",
   "short_name": "Udacity Feedback",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "manifest_version": 2,
   "description": "Immediate, visual feedback about any website's HTML, CSS and JavaScript",
   "homepage_url": "http://github.com/udacity/frontend-grading-engine",
   "icons": {
-    "16": "icons/udacity-invert16.png",
-    "48": "icons/udacity-invert48.png",
-    "128": "icons/udacity-invert128.png"
+    "16": "icons/udacity-official16.png",
+    "48": "icons/udacity-official48.png",
+    "128": "icons/udacity-official128.png"
   },
   "default_locale": "en",
   "options_page": "src/options/index.html",
   "browser_action": {
-    "default_icon": "icons/udacity-invert48.png",
+    "default_icon": "icons/udacity-official48.png",
     "default_title": "Udacity Feedback",
     "default_popup": "src/browser_action/browser_action.html"
   },
