updates browser_action’s icon to a list

--- a/chromium/manifest.json
+++ b/chromium/manifest.json
@@ -12,7 +12,12 @@
   },
   "options_page": "app/options/index.html",
   "browser_action": {
-    "default_icon": "icons/udacity-official48.png",
+    "default_icon": {
+      "16": "icons/udacity-official16.png",
+      "48": "icons/udacity-official48.png",
+      "128": "icons/udacity-official128.png"
+
+    },
     "default_title": "Udacity Feedback",
     "default_popup": "app/browser_action/browser_action.html"
   },
