fixes gulpfile.js
* gulpfile.js (components): Moves concatenation order of `components.js`.

--- a/chromium/manifest.json
+++ b/chromium/manifest.json
@@ -35,6 +35,7 @@
   "web_accessible_resources": [
     "app/js/*.js",
     "app/js/libs/*.js",
-    "app/templates/*.html"
+    "app/test_widget/**",
+    "app/templates/*.js"
   ]
 }
