--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.0.1",
     "gulp-install": "^0.4.0",
+    "gulp-sync": "^0.1.4",
     "gulp-uglify": "^1.4.2",
-    "gulp-watch": "^4.3.5"
+    "gulp-watch": "^4.3.5",
+    "mv": "^2.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
