--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-batch": "^1.0.5",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.0.1",
     "gulp-install": "^0.4.0",
