fixes Firefox >49 accessible ressources
* firefox/manifest.json (web_accessible_ressources): Refactors path to
  give real names (not wildcarts). This is a known bug fixed as of
  49. See: https://bugzilla.mozilla.org/show_bug.cgi?id=1217944

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -43,7 +43,8 @@
   ],
   "web_accessible_resources": [
     "app/js/*.js",
-    "app/js/libs/*.js",
-    "app/templates/*.js"
+    "app/js/libs/GE.js",
+    "app/js/libs/jsgrader.js",
+    "app/templates/components.js"
   ]
 }
