refactors the options page
* firefox/manifest.json (web_accessible_resources): adds the new style
  files.
* src/app/options/index.html: Adds a table instead of a comma separated
  list for the whitelist.

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -45,7 +45,8 @@
     }
   ],
   "web_accessible_resources": [
-    "app/js/*.js",
+    "app/css/common.css",
+    "app/css/fonts/fontawesome-webfont.ttf",
     "app/js/libs/GE.js",
     "app/js/libs/jsgrader.js",
     "app/templates/components.js"
