makes components as a separate library
* gulpfile.js (libraries): Adds a task to build third-party libraries.
* Changes the test widget components destination as `templates/templates.js`.
* lib/components.js: Adds the new components library.
* src/app/js/inject/inject.js (importComponentsLibrary): Adds a
  procedure to load the new components library.
* template
* src/app/js/inject/SateManager.js (runLoadSequence): Adds the new
  `importComponentsLibrary` procedure.
* chromium/manifest.json (web_accessible_resources): Adds the new
  components library.
* firefox/manifest.json (web_accessible_resources): Adds the new
  components library.

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -49,6 +49,7 @@
     "app/css/fonts/fontawesome-webfont.ttf",
     "app/js/libs/GE.js",
     "app/js/libs/jsgrader.js",
-    "app/templates/components.js"
+    "app/templates/templates.js",
+    "lib/components.js"
   ]
 }
