--- a/chromium/manifest.json
+++ b/chromium/manifest.json
@@ -36,6 +36,7 @@
     "app/js/*.js",
     "app/js/libs/GE.js",
     "app/js/libs/jsgrader.js",
-    "app/templates/components.js"
+    "app/templates/templates.js",
+    "lib/components.js"
   ]
 }
