replace the built background script directory
* firefox/manifest.json (background.scripts): Updates according to the
  new location.
* safari/Info.plist (Global Page): Updates according to the new
  location.
* gulpfile.js (jsFiles.background.dest): Changes the build directory to
  the root of the extension.
* gulpfile.js (jsFiles.globalPage.dest): Changes the build directory to
  the root of the extension.

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -26,7 +26,7 @@
     "default_popup": "app/browser_action/browser_action.html"
   },
   "background": {
-    "scripts": ["app/js/background.js"]
+    "scripts": ["background.js"]
   },
   "permissions": [
     "tabs",
