--- a/safari/Info.plist
+++ b/safari/Info.plist
@@ -49,7 +49,7 @@
         <dict>
             <key>Scripts</key>
             <dict>
-                <key>Start</key>
+                <key>End</key>
                 <array>
                     <string>app/js/inject.js</string>
                 </array>
