--- a/chromium/manifest.json
+++ b/chromium/manifest.json
@@ -6,13 +6,15 @@
   "description": "Immediate, visual feedback about any website's HTML, CSS and JavaScript",
   "homepage_url": "http://github.com/udacity/frontend-grading-engine",
   "icons": {
-    "16": "icons/udacity-official16.png",
-    "48": "icons/udacity-official48.png",
-    "128": "icons/udacity-official128.png"
+    "16": "icons/icon.png",
+    "32": "icons/Icon-32.png",
+    "48": "icons/Icon-48.png",
+    "64": "icons/Icon-64.png",
+    "128": "icons/Icon-128.png"
   },
   "options_page": "app/options/index.html",
   "browser_action": {
-    "default_icon": "icons/udacity-official48.png",
+    "default_icon": "icons/Icon-48.png",
     "default_title": "Udacity Feedback",
     "default_popup": "app/browser_action/browser_action.html"
   },
