fixes the toolbar icon in Safari
* gulpfile.js (iconFiles.src): Refactors the `String` variable as an
  `Array`.
* (icons task): Adds tracking of the new icon if it’s Safari.

--- a/safari/Info.plist
+++ b/safari/Info.plist
@@ -33,7 +33,7 @@
                     <key>Identifier</key>
                     <string>actionPageButton</string>
                     <key>Image</key>
-                    <string>icons/udacity-official32.png</string>
+                    <string>toolbar_icon.png</string>
                     <key>Include By Default</key>
                     <true/>
                     <key>Label</key>
