--- a/safari/Info.plist
+++ b/safari/Info.plist
@@ -14,6 +14,8 @@
         <string>0.3.0</string>
         <key>CFBundleVersion</key>
         <string>0.3.0</string>
+        <key>Update From Gallery</key>
+        <true/>
         <key>Chrome</key>
         <dict>
             <key>Global Page</key>
